--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "hardhat": "^2.12.7"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.8.1",
+    "@openzeppelin/contracts-upgradeable": "^4.8.1",
     "@openzeppelin/hardhat-upgrades": "^1.22.1",
     "dotenv": "^16.0.3"
   }
